cloud overlapping issue fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body{font-family:'Lato', sans-serif;font-size:16px}body.active{overflow:hidden;z
 #lead-down span{cursor:pointer;display:block;margin:0 auto;width:35px;height:35px;border-radius:50%;border:3px solid #a0cfee;text-align:center}
 #lead-down i{animation:pulsate 1.5s ease;animation-iteration-count:infinite;padding-top:5px}@keyframes pulsate{0%{transform:scale(1, 1)}50%{transform:scale(1.2, 1.2)}100%{transform:scale(1, 1)}}
 
-#about{padding:75px 15px;border-bottom:1px solid #86377b}
+#about{padding:75px 15px;border-bottom:1px solid #86377b; z-index: 20; position: relative;}
 #about h2{color:#374054}
 #about p{color:black;margin:0}
 
